// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CarrierLogo Four carriers 1`] = `
<div
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": 60,
      }
    }
  >
    <div>
      <h1
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        Four carriers
      </h1>
      
      <span
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        <div>
          <p>
            Some description about this CarrierLogo component with more than one image.
          </p>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        <hr
          style={
            Object {
              "backgroundColor": "#ccd6dd",
              "border": "none",
              "height": 1,
            }
          }
        />
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 16,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can pass object with maximum of 4 carriers.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <div>
            <h3
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              Four carriers
            </h3>
            
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div
          className="jsx-1285653980"
        >
          <img
            alt="Ryanair"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/FR.png"
            srcSet="//images.kiwi.com/airlines/32/FR.png 2x"
            title="Ryanair"
          />
          <img
            alt="Transavia France"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/TO.png"
            srcSet="//images.kiwi.com/airlines/32/TO.png 2x"
            title="Transavia France"
          />
          <img
            alt="Vueling"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/VY.png"
            srcSet="//images.kiwi.com/airlines/32/VY.png 2x"
            title="Vueling"
          />
          <img
            alt="Czech Airlines"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/OK.png"
            srcSet="//images.kiwi.com/airlines/32/OK.png 2x"
            title="Czech Airlines"
          />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                style={
                  Object {
                    "color": "#898d97",
                    "fontSize": 12,
                    "letterSpacing": 2,
                    "textTransform": "uppercase",
                  }
                }
              >
                Source
              </h4>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    CarrierLogo
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        carriers
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    FR
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Ryanair
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              , 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    TO
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Transavia France
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              , 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    VY
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Vueling
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              , 
                              …
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CarrierLogo One carrier 1`] = `
<div
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": 60,
      }
    }
  >
    <div>
      <h1
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        One carrier
      </h1>
      
      <span
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        <div>
          <p>
            Some description about this CarrierLogo component with one image.
          </p>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        <hr
          style={
            Object {
              "backgroundColor": "#ccd6dd",
              "border": "none",
              "height": 1,
            }
          }
        />
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 16,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can choose between three sizes: small, medium which is default and large.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <div>
            <h3
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              CarrierLogo medium
            </h3>
            
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div
          className="jsx-4114676188"
        >
          <img
            alt="Ryanair"
            className="jsx-4114676188"
            src="//images.kiwi.com/airlines/32/FR.png"
            srcSet="//images.kiwi.com/airlines/64/FR.png 2x"
            title="Ryanair"
          />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                style={
                  Object {
                    "color": "#898d97",
                    "fontSize": 12,
                    "letterSpacing": 2,
                    "textTransform": "uppercase",
                  }
                }
              >
                Source
              </h4>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    CarrierLogo
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        carriers
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    FR
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Ryanair
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CarrierLogo Three carriers 1`] = `
<div
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": 60,
      }
    }
  >
    <div>
      <h1
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        Three carriers
      </h1>
      
      <span
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        <div>
          <p>
            Some description about this CarrierLogo component with more than one image.
          </p>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        <hr
          style={
            Object {
              "backgroundColor": "#ccd6dd",
              "border": "none",
              "height": 1,
            }
          }
        />
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 16,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can pass object with maximum of 4 carriers.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <div>
            <h3
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              Three carriers
            </h3>
            
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div
          className="jsx-1285653980"
        >
          <img
            alt="Ryanair"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/FR.png"
            srcSet="//images.kiwi.com/airlines/32/FR.png 2x"
            title="Ryanair"
          />
          <img
            alt="Transavia France"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/TO.png"
            srcSet="//images.kiwi.com/airlines/32/TO.png 2x"
            title="Transavia France"
          />
          <img
            alt="Vueling"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/VY.png"
            srcSet="//images.kiwi.com/airlines/32/VY.png 2x"
            title="Vueling"
          />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                style={
                  Object {
                    "color": "#898d97",
                    "fontSize": 12,
                    "letterSpacing": 2,
                    "textTransform": "uppercase",
                  }
                }
              >
                Source
              </h4>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    CarrierLogo
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        carriers
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    FR
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Ryanair
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              , 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    TO
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Transavia France
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              , 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    VY
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Vueling
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CarrierLogo Two carriers 1`] = `
<div
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": 60,
      }
    }
  >
    <div>
      <h1
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        Two carriers
      </h1>
      
      <span
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        <div>
          <p>
            Some description about this CarrierLogo component with more than one image.
          </p>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        <hr
          style={
            Object {
              "backgroundColor": "#ccd6dd",
              "border": "none",
              "height": 1,
            }
          }
        />
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 16,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can pass object with maximum of 4 carriers.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <div>
            <h3
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              Two carriers
            </h3>
            
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div
          className="jsx-1285653980"
        >
          <img
            alt="Ryanair"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/FR.png"
            srcSet="//images.kiwi.com/airlines/32/FR.png 2x"
            title="Ryanair"
          />
          <img
            alt="Transavia France"
            className="jsx-1285653980"
            src="//images.kiwi.com/airlines/16/TO.png"
            srcSet="//images.kiwi.com/airlines/32/TO.png 2x"
            title="Transavia France"
          />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                style={
                  Object {
                    "color": "#898d97",
                    "fontSize": 12,
                    "letterSpacing": 2,
                    "textTransform": "uppercase",
                  }
                }
              >
                Source
              </h4>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    CarrierLogo
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        carriers
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    FR
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Ryanair
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              , 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    code
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    TO
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Transavia France
                                    "
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
